--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,4 +6,6 @@ REFRESH_TOKEN_TTL_SECONDS=604800
 CART_TAX_RATE=0.08
 DEFAULT_SHIPPING_FEE=5.99
 CORS_ORIGINS=http://localhost:5173
-
+MONGODB_URI=mongodb://localhost:27017/commerce
+REDIS_URL=redis://localhost:6379/0
+ENABLE_EXTERNAL_SERVICES=false
