feat: implement search and add to cart functionality in orchestrator
- Added `_execute_search_add_sequence` method to handle search and add to cart actions.
- Enhanced action processing to infer product selection when adding items to the cart.
- Updated `Orchestrator` class to include intent name in action execution.

feat: add refund and shipping address update features to order service

- Introduced `request_refund` method to handle refund requests for orders.
- Added `update_shipping_address` method to allow users to change shipping addresses before shipment.

fix: increase default inventory quantity in in-memory store

- Changed base quantity for in-stock variants from 20 to 200.

chore: update requirements to include pytest-cov for coverage reporting

- Added `pytest-cov` to requirements.txt for improved test coverage tracking.

test: add integration tests for order shipping address updates and refunds

- Created tests for updating shipping addresses and handling refunds in the order service.

test: enhance interaction flow tests for search and add to cart

- Added tests to validate the interaction flow for searching and adding items to the cart.

test: implement unit tests for circuit breaker and intent classifier

- Added unit tests to verify the functionality of the circuit breaker and intent classifier.

docs: update API contracts to include new refund and shipping address update endpoints

- Documented the new refund and shipping address update endpoints in API_Contracts.txt.

feat: enhance frontend chat functionality with streaming support

- Updated chat message handling to support streaming responses from the assistant.
- Implemented typing indicators for the assistant during chat interactions.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,3 +11,13 @@ REDIS_URL=redis://localhost:6379/0
 ENABLE_EXTERNAL_SERVICES=false
 RATE_LIMIT_ANONYMOUS_PER_MINUTE=120
 RATE_LIMIT_AUTHENTICATED_PER_MINUTE=600
+LLM_ENABLED=false
+LLM_PROVIDER=openai
+LLM_MODEL=gpt-4o-mini
+LLM_TIMEOUT_SECONDS=8
+LLM_MAX_TOKENS=200
+LLM_TEMPERATURE=0
+LLM_CIRCUIT_BREAKER_FAILURE_THRESHOLD=5
+LLM_CIRCUIT_BREAKER_TIMEOUT_SECONDS=60
+OPENAI_API_KEY=
+ANTHROPIC_API_KEY=
