--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,8 @@ jobs:
 
   backend-tests:
     runs-on: ubuntu-latest
+    needs:
+      - mongo-index-check
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -71,7 +73,17 @@ jobs:
       - name: Run backend tests
         run: |
           cd backend
-          pytest tests -q
+          pytest tests -q \
+            --cov=app \
+            --cov-report=term-missing \
+            --cov-report=xml \
+            --cov-fail-under=70
+
+      - name: Upload backend coverage report
+        uses: actions/upload-artifact@v4
+        with:
+          name: backend-coverage-xml
+          path: backend/coverage.xml
 
   frontend-build:
     runs-on: ubuntu-latest
