feat: add ESLint configuration and scripts for linting
- Added lint and lint:fix scripts to package.json for code quality checks.
- Introduced ESLint with TypeScript support and React plugin for better linting.
- Updated tsconfig files to enforce strict type checking and consistent casing.
- Refactored input elements in App.tsx to include accessible labels for better usability.

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -12,7 +12,8 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "types": ["vite/client"],
-    "strict": true
+    "strict": true,
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["src"]
 }
