feat: Project setup for omnichannel agentic commerce platform, including frontend UI, backend API, services, agents, and infrastructure.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,10 +18,10 @@ SESSION_COOKIE_SAMESITE=lax
 ENFORCE_JSON_CONTENT_TYPE=true
 REJECT_DUPLICATE_CRITICAL_HEADERS=true
 ADMIN_MFA_REQUIRED=false
-ADMIN_MFA_STATIC_CODE=
+ADMIN_MFA_TOTP_SECRET=JBSWY3DPEHPK3PXP
 LLM_ENABLED=false
-LLM_PROVIDER=openai
-LLM_MODEL=gpt-4o-mini
+LLM_PROVIDER=openrouter
+LLM_MODEL=meta-llama/llama-3.1-8b-instruct:free
 LLM_TIMEOUT_SECONDS=8
 LLM_MAX_TOKENS=200
 LLM_TEMPERATURE=0
@@ -38,6 +38,9 @@ LLM_PLANNER_EXECUTION_MODE=partial
 ORCHESTRATOR_MAX_ACTIONS_PER_REQUEST=5
 WS_HEARTBEAT_INTERVAL_SECONDS=25
 WS_HEARTBEAT_TIMEOUT_SECONDS=70
+WS_MAX_MESSAGE_CHARS=2000
+OPENROUTER_API_KEY=
+OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
 OPENAI_API_KEY=
 ANTHROPIC_API_KEY=
 SUPERU_ENABLED=false
