--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,11 +26,11 @@ services:
       - SESSION_COOKIE_SAMESITE=lax
       - ENFORCE_JSON_CONTENT_TYPE=true
       - REJECT_DUPLICATE_CRITICAL_HEADERS=true
-      - ADMIN_MFA_REQUIRED=false
-      - ADMIN_MFA_STATIC_CODE=
-      - LLM_ENABLED=true
-      - LLM_PROVIDER=openai
-      - LLM_MODEL=gpt-4o-mini
+      - ADMIN_MFA_REQUIRED=${ADMIN_MFA_REQUIRED:-false}
+      - ADMIN_MFA_TOTP_SECRET=${ADMIN_MFA_TOTP_SECRET:-JBSWY3DPEHPK3PXP}
+      - LLM_ENABLED=${LLM_ENABLED:-true}
+      - LLM_PROVIDER=${LLM_PROVIDER:-openrouter}
+      - LLM_MODEL=${LLM_MODEL:-meta-llama/llama-3.1-8b-instruct:free}
       - LLM_TIMEOUT_SECONDS=8
       - LLM_MAX_TOKENS=200
       - LLM_TEMPERATURE=0
@@ -46,10 +46,12 @@ services:
       - LLM_PLANNER_EXECUTION_MODE=${LLM_PLANNER_EXECUTION_MODE:-partial}
       - ORCHESTRATOR_MAX_ACTIONS_PER_REQUEST=${ORCHESTRATOR_MAX_ACTIONS_PER_REQUEST:-5}
       - WS_HEARTBEAT_INTERVAL_SECONDS=25
-      - WS_HEARTBEAT_TIMEOUT_SECONDS=70
+      - WS_MAX_MESSAGE_CHARS=${WS_MAX_MESSAGE_CHARS:-2000}
+      - OPENROUTER_API_KEY=${OPENROUTER_API_KEY:-}
+      - OPENROUTER_BASE_URL=${OPENROUTER_BASE_URL:-https://openrouter.ai/api/v1}
       - OPENAI_API_KEY=${OPENAI_API_KEY:-}
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY:-}
-      - SUPERU_ENABLED=false
+      - SUPERU_ENABLED=${SUPERU_ENABLED:-false}
       - SUPERU_API_URL=https://api.superu.ai
       - SUPERU_API_KEY=
       - SUPERU_ASSISTANT_ID=
